# dandelion

./: .appveyor.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CODEOWNERS  CODEOWNERS.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  PULL_REQUEST_TEMPLATE.md  README.md  TODO.md  TODO.txt  changelog.md  roadmap.md  rust-toolchain  rustfmt.toml  x86-dandelion.json  x86_64-dandelion.json
.cargo/: config
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-code.yml
communications/: AP-AS.md  CS-AS.md  mail.txt
documents/: diagram.mdj  final-report.md  literature-review.md  palette.md  project-specification.md  references.bib
documents/diagrams/: diagram.mdj
documents/publications/: journal.md  publication.md
documents/submission 2/: literature-review-draft-core.md  literature-review-draft-optional.md  literature-review-draft.md  literature-review.md
documents/submission 3/: requirements-analysis.md
documents/submission_2/: literature_review_draft_core.md
documents/submission_3/: requirements_analysis.md
documents/submission_4/: presentation.odp
documents/submission_5/: final_report.md
lectures/: L1.md  L2.md  L3.md  L4.md  L5.md  L6.md
meetings/: sample.md
meetings/2018-09/: 27.md
meetings/2018-10/: 04.md  11.md  18.md  25.md
meetings/2018-11/: 01.md  08.md  15.md  22.md  29.md
meetings/2018-12/: 06.md  13.md
meetings/2019-01/: 24.md  31.md
meetings/2019-02/: 06.md  11.md  18.md  25.md
meetings/2019-03/: 04.md  11.md  18.md  25.md
meetings/2019-04/: 15.md  16.md  22.md
resources/susv4-2018/: copyr.html  frame.html  index.html  meta.idx  mindex.html  register.html  style.css  webindex.html  word.idx  xbd.html  xcu.html  xrat.html  xsh.html
resources/susv4-2018/basedefs/: V1_chap01.html  V1_chap02.html  V1_chap03.html  V1_chap04.html  V1_chap05.html  V1_chap06.html  V1_chap07.html  V1_chap08.html  V1_chap09.html  V1_chap10.html  V1_chap11.html  V1_chap12.html  V1_chap13.html  V1_title.html  aio.h.html  arpa_inet.h.html  assert.h.html  complex.h.html  contents.html  contents.html~  cpio.h.html  ctype.h.html  dirent.h.html  dlfcn.h.html  errno.h.html  fcntl.h.html  fenv.h.html  float.h.html  fmtmsg.h.html  fnmatch.h.html  ftw.h.html  glob.h.html  grp.h.html  iconv.h.html  inttypes.h.html  iso646.h.html  langinfo.h.html  libgen.h.html  limits.h.html  locale.h.html  (+58 more)
resources/susv4-2018/frontmatter/: acknowl.html  notice.html  participants.html  participants.html.2013  participants.html.2016  participants.html~  preface.html  refdocs.html  trademarks.html  typographics.html
resources/susv4-2018/functions/: FD_SET.html  V2_chap01.html  V2_chap02.html  V2_chap03.html  V2_title.html  _Exit.html  _longjmp.html  _tolower.html  _toupper.html  abort.html  abs.html  accept.html  acos.html  acoshf.html  aio_cancel.html  aio_error.html  aio_fsync.html  aio_read.html  aio_return.html  aio_suspend.html  aio_write.html  alarm.html  asctime_r.html  asinf.html  asinhl.html  assert.html  atan.html  atan2.html  atanh.html  atexit.html  atof.html  atoi.html  atoll.html  basename.html  bind.html  bsearch.html  btowc.html  cabsf.html  cacos.html  cacosh.html  (+654 more)
resources/susv4-2018/help/: about.html  codes.html  decode  terms.html
resources/susv4-2018/idx/: alphabet.html  batch.html  development.html  fidx.html  fidx2.html  fidx2.html~  fidx3.html  fidx4.html  fidx5.html  fidx6.html  fidx7.html  fsort  ftoc.html  functions.html  functions.html~  genalpha  genalpha.2013  genalpha~  head.html  headers.html  ia.html  ib.html  ic.html  id.html  ie.html  if.html  ig.html  ih.html  ii.html  ij.html  ik.html  il.html  im.html  in.html  index.html  io.html  ip.html  iq.html  ir.html  is.html  (+37 more)
resources/susv4-2018/utilities/: V3_chap01.html  V3_chap02.html  V3_chap03.html  V3_chap04.html  V3_title.html  admin.html  alias.html  ar.html  asa.html  at.html  basename.html  batch.html  bc.html  bg.html  c99.html  cal.html  cat.html  cd.html  cflow.html  chgrp.html  chmod.html  chown.html  cksum.html  cmp.html  comm.html  command.html  compress.html  cp.html  crontab.html  csplit.html  ctags.html  cut.html  cxref.html  date.html  dd.html  delta.html  df.html  diff.html  dirname.html  du.html  (+125 more)
resources/susv4-2018/xrat/: V4_port.html  V4_subprofiles.html  V4_title.html  V4_xbd_chap01.html  V4_xbd_chap02.html  V4_xbd_chap03.html  V4_xbd_chap04.html  V4_xbd_chap05.html  V4_xbd_chap06.html  V4_xbd_chap07.html  V4_xbd_chap08.html  V4_xbd_chap09.html  V4_xbd_chap10.html  V4_xbd_chap11.html  V4_xbd_chap12.html  V4_xbd_chap13.html  V4_xcu_chap01.html  V4_xcu_chap02.html  V4_xcu_chap03.html  V4_xcu_chap04.html  V4_xcu_chap04.html~  V4_xsh_chap01.html  (+3 more)
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  test-basic-boot.rs  test-panic.rs  vga_buffer.rs
src/kernel/: acpi.rs  interrupts.rs  mod.rs  process.rs  serial.rs  task.rs  time.rs  vga_buffer.rs
src/scheduler/: admitter.rs  dispatcher.rs  mod.rs  swapper.rs
tests/: basic_boot.rs  heap_allocation.rs  panic_handler.rs  should_panic.rs  stack_overflow.rs
(+20 files in other folders)
