[package]
name = "dandelion"
version = "0.3.0"
authors = ["Antoine \"Anthony\" Sébert <antoine.sb@orange.fr>"]
edition = "2018"
publish = false
description = "Microkernel Real-Time Operating System in Rust"
homepage = "https://github.com/AntoineSebert/dandelion"
repository = "https://github.com/AntoineSebert/dandelion"
readme = "README.md"
keywords = ["real-time", "OS", "RTOS", "microkernel"]
categories = ["embedded", "no-std"]
license = "CC-BY-NC-SA-4.0"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

#[doc]
#https://doc.rust-lang.org/rustdoc

[package.metadata.bootimage]
run-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial", "mon:stdio"
]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial", "stdio",
	"-display", "none"
]
test-success-exit-code = 33
default-target = "x86_64-dandelion.json"

[dependencies]
array-init = "^0.1"
bitflags = "^1.2"
integer-sqrt = "^0.1"
linked_list_allocator = "^0.6"
pc-keyboard = "^0.5"
pic8259_simple = "^0.1"
spin = "^0.5"
uart_16550 = "^0.2"
volatile = "^0.2"
x86_64 = "^0.9"

[dependencies.arraydeque]
version = "^0.4"
default-features = false

[dependencies.bootloader]
version = "^0.8"
features = ["map_physical_memory"]

[dependencies.cmos]
version = "^0.1"
git = "https://github.com/AntoineSebert/cmos"

[dependencies.either]
version = "^1.5"
default-features = false

[dependencies.lazy_static]
version = "^1.4"
features = ["spin_no_std"]

[dependencies.num-traits]
version = "^0.2"
default-features = false

[dev-dependencies]
array-init = "^0.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
