[package]
name = "dandelion"
version = "0.3.0"
authors = ["Antoine \"Anthony\" Sébert <antoine.sb@orange.fr>"]
edition = "2018"
publish = false
description = "Microkernel Real-Time Operating System in Rust"
homepage = "https://github.com/AntoineSebert/dandelion"
repository = "https://github.com/AntoineSebert/dandelion"
readme = "README.md"
keywords = ["real-time", "OS", "RTOS", "microkernel"]
categories = ["embedded", "no-std"]
license = "CC-BY-NC-SA-4.0"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

#[doc]
#https://doc.rust-lang.org/rustdoc

[package.metadata.bootimage]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial", "stdio",
	"-display", "none"
]
test-success-exit-code = 33

[dependencies]
array-init = "^2.0"
bitflags = "^1.2"
integer-sqrt = "^0.1"
linked_list_allocator = "^0.8"
pc-keyboard = "^0.5"
pic8259_simple = "^0.2"
rlibc = "^1.0"
spin = "^0.9"
uart_16550 = "^0.2"
volatile = "^0.4"
x86_64 = "^0.13"

[dependencies.arraydeque]
version = "^0.4"
default-features = false

[dependencies.bootloader]
version = "^0.10.0"
features = ["map_physical_memory"]

[dependencies.cmos]
version = "^0.1"
git = "https://github.com/AntoineSebert/cmos"

[dependencies.either]
version = "^1.6"
default-features = false

[dependencies.lazy_static]
version = "^1.4"
features = ["spin_no_std"]

[dependencies.num-traits]
version = "^0.2"
default-features = false

[dependencies.crossbeam-queue]
version = "^0.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "^0.3"
default-features = false

[dependencies.futures-util]
version = "^0.3"
default-features = false
features = ["alloc"]
