[package]
name = "dandelion"
version = "0.4.0"
authors = ["Antoine  Sébert <antoine.sb@orange.fr>"]
edition = "2021"
publish = false
description = "Microkernel Real-Time Operating System in Rust"
homepage = "https://github.com/AntoineSebert/dandelion"
repository = "https://github.com/AntoineSebert/dandelion"
readme = "README.md"
keywords = ["real-time", "OS", "RTOS", "microkernel"]
categories = ["embedded", "no-std"]
license = "CC-BY-NC-SA-4.0"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootimage]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial", "stdio",
	"-display", "none"
]
test-success-exit-code = 33

[dependencies]
bitflags = "^2.0"
integer-sqrt = "^0.1"
linked_list_allocator = "^0.10.2"
pc-keyboard = "^0.5"
pic8259 = "0.10.1"
spin = "^0.9"
uart_16550 = "^0.2"
volatile = "^0.2" # must stay at v0.2 for now
x86_64 = "^0.14"
cmos-rtc = {version = "^0.1", git = "https://github.com/deadblackclover/CMOS.git", rev = "ae088e85a80f2c9668233f0eab5aad4caf42c81c"}
bootloader = "0.11.3"
bootloader_api = "0.11.3"

[dependencies.either]
version = "^1.6"
default-features = false

[dependencies.lazy_static]
version = "^1.4"
features = ["spin_no_std"]

[dependencies.num-traits]
version = "^0.2"
default-features = false

[dependencies.crossbeam-queue]
version = "^0.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "^0.3"
default-features = false

[dependencies.futures-util]
version = "^0.3"
default-features = false
features = ["alloc"]
